# CTF-destroyer

./: .env.example  .gitignore  README.md  pyproject.toml
ctf_destroyer/: __init__.py  challenges.py  cli.py  discord_sync.py  graph.py  import_cli.py  import_service.py  orchestrator_service.py  skills.py  supervisor.py  supervisor_cli.py  workers.py  workspace.py  writeups.py
ctf_destroyer/campaign/: __init__.py  logic.py  models.py  persistence.py
ctf_destroyer/importers/: __init__.py  ctfd.py  models.py  review.py  sources.py  text.py
docs/superpowers/specs/: 2026-03-12-ctf-supervisor-v1-design.md
examples/: evaluative.json
skills/ctf-blockchain-solver/: SKILL.md
skills/ctf-category-router/: SKILL.md
skills/ctf-cloud-solver/: SKILL.md
skills/ctf-core-methodology/: SKILL.md
skills/ctf-crypto-solver/: SKILL.md
skills/ctf-forensics-solver/: SKILL.md
skills/ctf-hardware-rf-solver/: SKILL.md
skills/ctf-jail-solver/: SKILL.md
skills/ctf-misc-solver/: SKILL.md
skills/ctf-mobile-solver/: SKILL.md
skills/ctf-osint-solver/: SKILL.md
skills/ctf-pwn-solver/: SKILL.md
skills/ctf-reverse-solver/: SKILL.md
skills/ctf-stego-solver/: SKILL.md
skills/ctf-web-solver/: SKILL.md
skills/ctf-writeup-writer/: SKILL.md
tests/: test_cli.py  test_ctfd_import_cli.py  test_discord.py  test_graph.py  test_import_cli.py  test_importers.py  test_orchestrator_service.py  test_skills.py  test_supervisor.py  test_workers.py  test_workspace.py  test_writeups.py
